Fix the hourglass images being slightly off center

--- a/components/WoodSliders/styles.module.scss
+++ b/components/WoodSliders/styles.module.scss
@@ -51,7 +51,7 @@
   background-image: url("/images/crossed_hourglass.png");
   background-repeat: no-repeat;
   background-size: 90%;
-  background-position: center;
+  background-position: 48% 50%;
   border: 2px solid #38261b;
   border-radius: 50%;
   cursor: pointer;
